# spatial-partitioning

./: .gitignore  .gitmodules  CMakeLists.txt  benchmark-even.json  benchmark-uneven.json  benchmark.json  graph.py  grid.json  naive.json  quadtree.json  spatial_hashing.json
include/: benchmark.h  box.h  color.h  ds.h  grid.h  hashing.h  naive.h  quadtree.h  strategy_interface.h  vec2.h  window.h
paper/: .gitignore  paper.aux  paper.out  paper.tex  paper.toc
src/: benchmark.c  box.c  ds.c  grid.c  hashing.c  main.c  naive.c  quadtree.c  window.c
